feat: create initial modern website shell HTML structure with header, hero, features, and footer.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 <div class="usp-card">
                     <div class="usp-icon">🎉</div>
                     <h3>Festgaranti</h3>
-                    <p>Vi spiller ikke bare musik – vi skaber en fest! Dansegulvet er fyldt fra start til slut.</p>
+                    <p>Vi spiller ikke bare musik – vi skaber en fest! Vi spiller musik man kan danse til fra start til
+                        slut.</p>
                 </div>
                 <div class="usp-card">
                     <div class="usp-icon">🔊</div>
@@ -141,7 +142,7 @@
                     <div class="audio-placeholder">
                         <div class="audio-icon">🎵</div>
                         <div class="audio-info">
-                            <div class="audio-title">Pop Medley</div>
+                            <div class="audio-title">Friday I'm in Love</div>
                             <div class="audio-status">Kommer snart (MP3)</div>
                         </div>
                     </div>
@@ -222,8 +223,8 @@
             <div class="faq-grid">
                 <div class="faq-item">
                     <h3>💰 Hvad koster det?</h3>
-                    <p>Vores standardpris er <strong>8.000 kr.</strong> Dette dækker 2 sæt af 60 minutter samt
-                        opstilling af lyd og lys.</p>
+                    <p>Prisen afhænger af jeres arrangement, antal sæt, og transporttid. Kontakt os for et uforpligtende
+                        tilbud tilpasset jeres behov.</p>
                 </div>
                 <div class="faq-item">
                     <h3>⏰ Hvor længe spiller I?</h3>
