--- a/index.html
+++ b/index.html
@@ -139,26 +139,20 @@
 
                 <div class="audio-container">
                     <h3>Lydeksempler</h3>
-                    <div class="audio-placeholder">
-                        <div class="audio-icon">🎵</div>
-                        <div class="audio-info">
-                            <div class="audio-title">Friday I'm in Love</div>
-                            <div class="audio-status">Kommer snart (MP3)</div>
-                        </div>
+                    <div class="soundcloud-embed">
+                        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%3Atracks%3A2007308151%3Fsecret_token%3Ds-tatm4rclGsp&color=%23ff8c00&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+                        </iframe>
                     </div>
-                    <div class="audio-placeholder">
-                        <div class="audio-icon">🎸</div>
-                        <div class="audio-info">
-                            <div class="audio-title">Rock Klassikere</div>
-                            <div class="audio-status">Kommer snart (MP3)</div>
-                        </div>
+                    <div class="soundcloud-embed">
+                        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A1996484815&color=%23ff8c00&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+                        </iframe>
                     </div>
-                    <div class="audio-placeholder">
-                        <div class="audio-icon">🎤</div>
-                        <div class="audio-info">
-                            <div class="audio-title">Akkustisk Session</div>
-                            <div class="audio-status">Kommer snart (MP3)</div>
-                        </div>
+                    <div class="soundcloud-embed">
+                        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%3Atracks%3A1996484327%3Fsecret_token%3Ds-KXMrz85jJY7&color=%23ff8c00&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+                        </iframe>
                     </div>
                 </div>
             </div>
