Some design updates

--- a/index.html
+++ b/index.html
@@ -4,13 +4,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recover - Musik til din fest</title>
+
+    <!-- SEO Meta Tags -->
+    <title>Recover - Festband til Bryllup, Firmafest & Events | Livemusik i Danmark</title>
     <meta name="description"
-        content="Recover er det ultimative festband til din næste begivenhed. Vi spiller de største hits og skaber en uforglemmelig stemning.">
+        content="Book Recover - Danmarks festband med de største hits fra 60'erne til i dag. Perfekt til bryllup, firmafest og private arrangementer. Ring 21 70 07 17">
+    <meta name="keywords"
+        content="festband, liveband, coverband, bryllup, firmafest, livemusik, band til fest, Danmark, Recover">
+    <meta name="author" content="Recover Band">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://recover-band.dk/">
+    <meta property="og:title" content="Recover - Festband til Bryllup & Events">
+    <meta property="og:description"
+        content="Book Danmarks festband med de største hits. Perfekt til bryllup, firmafest og private arrangementer.">
+    <meta property="og:image" content="https://recover-band.dk/assets/images/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://recover-band.dk/">
+    <meta property="twitter:title" content="Recover - Festband til Bryllup & Events">
+    <meta property="twitter:description"
+        content="Book Danmarks festband med de største hits. Perfekt til bryllup, firmafest og private arrangementer.">
+    <meta property="twitter:image" content="https://recover-band.dk/assets/images/logo.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700;900&display=swap" rel="stylesheet">
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MusicGroup",
+      "name": "Recover",
+      "description": "Festband til bryllup, firmafest og events",
+      "genre": "Cover Band",
+      "url": "https://recover-band.dk",
+      "telephone": "+45-21-70-07-17",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "DK"
+      }
+    }
+    </script>
 </head>
 
 <body>
@@ -25,9 +72,19 @@
             </button>
             <ul class="nav-links">
                 <li><a href="#home">Hjem</a></li>
-                <li><a href="#about">Om Os</a></li>
-                <li><a href="#media">Media</a></li>
                 <li><a href="#repertoire">Repertoire</a></li>
+                <li><a href="#about">Om Os</a></li>
+                <li>
+                    <a href="tel:+4521700717" class="phone-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path
+                                d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+                            </path>
+                        </svg>
+                        21 70 07 17
+                    </a>
+                </li>
                 <li>
                     <button id="theme-toggle" class="theme-toggle" aria-label="Skift tema">
                         <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
