More design optimazation

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Recover - Festband til Bryllup, Firmafest & Events | Livemusik i Danmark</title>
+    <title>Recover - Festband i Odense & Fyn | Musik til Julefrokost & Bryllup</title>
     <meta name="description"
-        content="Book Recover - Danmarks festband med de største hits fra 60'erne til i dag. Perfekt til bryllup, firmafest og private arrangementer. Ring 21 70 07 17">
+        content="Book Recover - Odenses fedeste festband. Vi spiller til julefrokost, bryllup og firmafest på Fyn og i hele landet. Priser fra 8.000 kr. Kontakt Anders på 21 70 07 17.">
     <meta name="keywords"
-        content="festband, liveband, coverband, bryllup, firmafest, livemusik, band til fest, Danmark, Recover">
+        content="festband odense, liveband fyn, musik til bryllup fyn, billigt festband, julefrokost musik odense, firmafest musik fyn, Recover, Anders Borgermann">
     <meta name="author" content="Recover Band">
     <meta name="robots" content="index, follow">
 
@@ -116,15 +116,27 @@
         <div class="ambient-shape shape-1"></div>
         <div class="ambient-shape shape-2"></div>
         <div class="hero-overlay"></div>
+
+        <!-- Floating Artists Background -->
+        <div class="hero-floating-artists">
+            <span class="floating-artist" style="--i:1; --x:10%; --y:20%;">Kenny Loggins</span>
+            <span class="floating-artist" style="--i:2; --x:80%; --y:15%;">ABBA</span>
+            <span class="floating-artist" style="--i:3; --x:15%; --y:70%;">Bruno Mars</span>
+            <span class="floating-artist" style="--i:4; --x:75%; --y:65%;">D-A-D</span>
+            <span class="floating-artist" style="--i:5; --x:5%; --y:45%;">GNAGS</span>
+            <span class="floating-artist" style="--i:6; --x:85%; --y:40%;">Dua Lipa</span>
+        </div>
+
         <div class="hero-content">
             <div class="logo-container">
                 <img src="assets/images/logo.png" alt="Recover Band Logo" class="hero-logo">
             </div>
-            <h1 class="hero-slogan">Musik til din fest</h1>
-            <p class="hero-subtext">Vi sætter gang i dansegulvet med de største hits gennem tiden.</p>
+            <h1 class="hero-slogan">Musik til Julefrokost, Bryllup & Fest</h1>
+            <p class="hero-subtext">Vi er dit lokale festband fra Odense. Vi spiller op til dans på hele Fyn og i resten
+                af landet. Priser fra kun 8.000 kr.</p>
             <div class="hero-buttons">
-                <a href="#contact" class="btn btn-primary">Book Bandet</a>
-                <a href="#repertoire" class="btn btn-secondary">Se Sætliste</a>
+                <a href="#contact" class="btn btn-primary">Få et Tilbud af Anders</a>
+                <a href="#repertoire" class="btn btn-secondary">Hør hvad vi spiller</a>
             </div>
         </div>
     </header>
@@ -140,8 +152,9 @@
                 </div>
                 <div class="usp-card">
                     <div class="usp-icon">🔊</div>
-                    <h3>Professionelt Setup</h3>
-                    <p>Top-tunet lyd og lys, der passer til alt fra intime bryllupper til store firmafester.</p>
+                    <h3>All Inclusive Oplevelse</h3>
+                    <p>Vi kommer med det hele! Professionelt lydanlæg og et vildt lysshow, der er synkroniseret med
+                        musikken for den fulde koncertoplevelse.</p>
                 </div>
                 <div class="usp-card">
                     <div class="usp-icon">🎸</div>
@@ -156,16 +169,34 @@
         <div class="container">
             <div class="about-grid">
                 <div class="about-text">
-                    <h2 class="section-title">Hvem er vi?</h2>
-                    <p class="section-desc" style="text-align: left; margin-bottom: 1.5rem;">Recover er mødet mellem
-                        solid rutine og frisk energi.</p>
-                    <p>Navnet <strong>Recover</strong> er ikke tilfældigt. Vi spiller ikke bare covernumre – vi spiller
-                        "cover af covernumre". Vi tager de største hits og giver dem vores eget lille tvist, så de føles
-                        både genkendelige og helt friske. Det er musik, du kender, men leveret med en energi og kant,
-                        der gør festen unik.</p>
-                    <p style="margin-top: 1rem;">Vi er et band med en unik sammensætning af musikere i 30'erne og
-                        60'erne. Det giver os en bred musikalsk forståelse og evnen til at ramme alle generationer på
-                        dansegulvet.</p>
+                    <h2 class="section-title">Mød Bandet</h2>
+                    <p class="section-desc" style="text-align: left; margin-bottom: 1.5rem;">Recover består af fire
+                        passionerede musikere:</p>
+
+                    <div class="band-members"
+                        style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin-bottom: 2rem;">
+                        <div class="member">
+                            <strong>🎤 Anders</strong><br>Forsanger & Akustisk Guitar
+                        </div>
+                        <div class="member">
+                            <strong>🎸 Mikkel</strong><br>Lead Guitar
+                        </div>
+                        <div class="member">
+                            <strong>🎸 Thomas</strong><br>Bas
+                        </div>
+                        <div class="member">
+                            <strong>🥁 Per</strong><br>Trommer
+                        </div>
+                    </div>
+
+                    <p>Vi er samlet på tværs af generationer, forenet af kærligheden til musikken og glæden ved
+                        at skabe en fest sammen. Kemien mellem os på scenen er ægte — og den smitter. Uanset publikum og
+                        anledning handler det for os om nærvær, godt humør og en musikalsk oplevelse.</p>
+                    <p style="margin-top: 1rem;">Vores repertoire består af de hits, du kender… bare ikke nødvendigvis
+                        dem, du forventer. I stedet for de mest slidte “suppe-steg-og-is”-klassikere går vi efter de
+                        sange, der overrasker, løfter stemningen og får folk til at udbryde: “Den havde jeg helt glemt,
+                        hvor fed er den lige!” Det er genkendeligt, dansabelt og leveret med et glimt i øjet — præcis
+                        som en god fest skal være.</p>
                 </div>
                 <div class="about-stats">
                     <div class="stat-card">
@@ -308,17 +339,19 @@
             <div class="faq-grid">
                 <div class="faq-item">
                     <h3>💰 Hvad koster det?</h3>
-                    <p>Prisen afhænger af jeres arrangement, antal sæt, og transporttid. Kontakt os for et uforpligtende
-                        tilbud tilpasset jeres behov.</p>
+                    <p>Vores priser starter typisk fra <strong>8.000 kr.</strong> for en aften (2 x 45 minutter). Prisen
+                        kan variere lidt afhængigt af transport (vi kører fra Odense) og særlige ønsker. Kontakt os for
+                        en præcis pris.</p>
                 </div>
                 <div class="faq-item">
                     <h3>⏰ Hvor længe spiller I?</h3>
-                    <p>Vi spiller typisk <strong>2 x 60 minutter</strong>. Det er den perfekte længde til at holde
-                        energien høj og festen i gang.</p>
+                    <p>Standard er <strong>2 x 45 minutter</strong>, hvilket passer perfekt til de fleste fester. Vi kan
+                        selvfølgelig også aftale 3 sæt eller andre løsninger, hvis I ønsker mere musik.</p>
                 </div>
                 <div class="faq-item">
                     <h3>🎵 Medbringer I selv udstyr?</h3>
-                    <p>Ja, vi medbringer alt nødvendigt lyd- og lysudstyr, der passer til festens størrelse.</p>
+                    <p>Ja, vi medbringer alt! Det inkluderer komplet lydanlæg og vores store lysshow, der er
+                        programmeret til musikken. I skal bare sørge for strøm og danseglade gæster.</p>
                 </div>
                 <div class="faq-item">
                     <h3>🎸 Kan vi ønske sange?</h3>
@@ -327,7 +360,8 @@
                 </div>
                 <div class="faq-item">
                     <h3>🌍 Spiller I i hele landet?</h3>
-                    <p>Vi spiller primært i Jylland og på Fyn, men kontakt os endelig for arrangementer på Sjælland.</p>
+                    <p>Ja! Vi elsker at komme rundt i landet, så uanset om festen er i Skagen, København eller Gedser,
+                        kommer vi gerne og spiller op til dans.</p>
                 </div>
             </div>
         </div>
@@ -336,9 +370,10 @@
     <section id="contact" class="section contact-section">
         <div class="container">
             <h2 class="section-title">Kontakt Os</h2>
-            <p class="section-desc">Skal vi spille til din næste fest? Udfyld formularen og få et uforpligtende tilbud.
+            <p class="section-desc">Skal vi spille til jeres julefrokost, bryllup eller firmafest? Udfyld formularen, så
+                vender Anders tilbage med et uforpligtende tilbud.
             </p>
-            <form class="contact-form">
+            <form class="contact-form" id="contactForm">
                 <div class="form-group-row">
                     <div class="form-group">
                         <label for="name">Navn</label>
@@ -354,6 +389,7 @@
                         <label for="type">Type af fest</label>
                         <select id="type" class="form-select">
                             <option value="">Vælg type...</option>
+                            <option value="julefrokost">Julefrokost</option>
                             <option value="bryllup">Bryllup</option>
                             <option value="fødselsdag">Fødselsdag</option>
                             <option value="firmafest">Firmafest</option>
